# Agentic-Doc-Parser

./: .gitignore  INDEX.md  README.md  pyproject.toml
data/cache/: fy2024_analysis_of_revenue_and_expenditure.json  fy2024_analysis_of_revenue_and_expenditure.md
docs/: architecture.md  docling.md  langgraph-supervisor.md  mcp.md  rag.md  runbook.md  setup.md
docs/adr/: ADR-001-docling-pdf-parser.md  ADR-002-page-markers-in-extraction-context.md  ADR-003-latest-actual-fiscal-position-column.md  ADR-004-operating-revenue-subcategories-included.md  ADR-005-date-parsing-edge-cases.md  ADR-006-chunking-strategy.md  ADR-007-single-shot-agent-design.md
mcp/: datetime_server.py
results/part_1/: README.md
results/part_2/: README.md
results/part_3/: README.md
specs/: feature-brief.md
specs/plans/: feat-chromadb-rag-store.md  feat-docling-pdf-parser.md  feat-fastmcp-datetime-server.md  feat-part1-structured-extraction.md  feat-part2-tool-calling-date-reasoning.md  feat-part3-langgraph-agent.md  feat-project-scaffolding.md  fix-agent-domain-overlap.md  fix-remove-pypdfium2-supplement.md
specs/tickets/: 01-project-scaffolding.md  02-docling-pdf-parser.md  03-part1-structured-extraction.md  04-fastmcp-datetime-server.md  05-part2-tool-calling-date-reasoning.md  06-chromadb-rag-store.md  07-langgraph-multi-agent-supervisor.md  08-readme-documentation.md  ticket_summary.md
src/: part1_extraction.py  part2_tool_calling.py  part3_agent.py  prompts.yaml
src/utils/: llm.py  logging_config.py  parser.py  rag.py
